--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'mysql:mysql-connector-java:8.0.15'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 test {
