--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'mysql:mysql-connector-java:8.0.15'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'io.rest-assured:json-path:4.4.0'
+	testImplementation 'io.rest-assured:rest-assured:4.4.0'
+	implementation 'com.github.javafaker:javafaker:1.0.2'
+
+
 }
 
 test {
