--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	testImplementation 'io.rest-assured:json-path:4.4.0'
 	testImplementation 'io.rest-assured:rest-assured:4.4.0'
 	implementation 'com.github.javafaker:javafaker:1.0.2'
-
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 
 }
 
